gccida/c3/recog_5
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:5807:10: error: conflicting types for 'recog_5'
__int64  recog_5( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:5343:12: note: previous declaration is here
static int recog_5 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6004:4: error: expected ';' after expression
rtx opc; // [rsp+8h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6004:5: error: use of undeclared identifier 'opc'
rtx opc; // [rsp+8h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6014:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6015:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x0[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6018:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6026:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6027:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)x0[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6030:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6044:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)x0[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6048:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6065:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6066:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( int *)x0[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6077:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v22; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6080:16: error: must use 'enum' tag to refer to type 'mode_class'
v23 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v22 >> 14) & 0x3FC)); 
               ^
               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6080:40: error: use of undeclared identifier 'mode_class_0'
v23 = *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v22 >> 14) & 0x3FC)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6110:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6121:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( int *)x0[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/insn-recog.c:6131:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/recog_5/src/obj/insn-recog.o] Error 1
